update(frontend): 梨子ちゃんライブラリではヘッダーにRikordモード変更ボタンを表示しない
ボタンを非表示にするとヘッダーがずれるので併せてスタイリング調整

--- a/apps/frontend/src/assets/scss/_variables.scss
+++ b/apps/frontend/src/assets/scss/_variables.scss
@@ -1,3 +1,4 @@
-$app-footer-height: 100px;
+$app-header-height: 50px;
+$app-footer-height: 80px;
 $riko-image-thumbnail-size: 150px;
 $riko-image-border-radius: 10px;
